// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.emotion-2 {
  padding: 20px;
  background-color: #1a1a1a;
  color: #fff;
  display: grid;
  gap: 24px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  row-gap: 64px;
}

@media (min-width:900px) {
  .emotion-2 {
    gap: 48px;
    row-gap: 96px;
    grid-template-columns: 1fr 1fr;
    padding: calc(100% / 12) calc(100% / 6);
  }
}

.emotion-4 {
  display: grid;
  font-weight: 500;
  font-size: 1.25rem;
  gap: 8px;
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 700;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-7 {
    font-size: 32px;
  }
}

.emotion-16 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
}

@media (min-width:600px) {
  .emotion-16 {
    grid-template-columns: 1fr 1fr;
  }
}

.emotion-18 {
  display: grid;
  gap: 8px;
  grid-auto-rows: max-content;
}

.emotion-20 {
  text-transform: uppercase;
  font-weight: 300;
  font-size: 14px;
}

.emotion-22 {
  display: grid;
  font-weight: 500;
  font-size: 1.25rem;
}

.emotion-24 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:600px) {
  .emotion-24 {
    border-bottom: 0;
  }
}

.emotion-25 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-46 {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  height: 50%;
  background-color: #000;
  z-index: -1;
  -webkit-transform: translateY(-2rem);
  -moz-transform: translateY(-2rem);
  -ms-transform: translateY(-2rem);
  transform: translateY(-2rem);
}

<footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Gesellschaft
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Politik
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Kultur
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Tsüri-News
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://google.com"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Was lauft?
          </span>
        </a>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Guides
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Agenda
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="https://google.com"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Denkmal.org
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Tsüri Guide
              </span>
            </a>
          </div>
        </div>
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Fokusthema
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Mobilität
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Bildung
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Konsum
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Archive
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-46 emotion-47"
        />
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Über Uns
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/team/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Team
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/about-us/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Über Uns
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Kontakt
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Jobs
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.emotion-2 {
  padding: 20px;
  background-color: #1a1a1a;
  color: #fff;
  display: grid;
  gap: 24px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  row-gap: 64px;
}

@media (min-width:900px) {
  .emotion-2 {
    gap: 48px;
    row-gap: 96px;
    grid-template-columns: 1fr 1fr;
    padding: calc(100% / 12) calc(100% / 6);
  }
}

.emotion-4 {
  display: grid;
  font-weight: 500;
  font-size: 1.25rem;
  gap: 8px;
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 700;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-7 {
    font-size: 32px;
  }
}

.emotion-16 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
}

@media (min-width:600px) {
  .emotion-16 {
    grid-template-columns: 1fr 1fr;
  }
}

.emotion-18 {
  display: grid;
  gap: 8px;
  grid-auto-rows: max-content;
}

.emotion-20 {
  text-transform: uppercase;
  font-weight: 300;
  font-size: 14px;
}

.emotion-22 {
  display: grid;
  font-weight: 500;
  font-size: 1.25rem;
}

.emotion-24 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:600px) {
  .emotion-24 {
    border-bottom: 0;
  }
}

.emotion-25 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-46 {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  height: 50%;
  background-color: #000;
  z-index: -1;
  -webkit-transform: translateY(-2rem);
  -moz-transform: translateY(-2rem);
  -ms-transform: translateY(-2rem);
  transform: translateY(-2rem);
}

<footer
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Gesellschaft
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Politik
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Kultur
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Tsüri-News
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://google.com"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Was lauft?
          </span>
        </a>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Guides
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Agenda
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="https://google.com"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Denkmal.org
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Tsüri Guide
              </span>
            </a>
          </div>
        </div>
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Fokusthema
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Mobilität
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Bildung
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Konsum
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Archive
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-46 emotion-47"
        />
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Über Uns
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/team/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Team
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/about-us/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Über Uns
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Kontakt
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Jobs
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.emotion-2 {
  padding: 20px;
  background-color: #1a1a1a;
  color: #fff;
  display: grid;
  gap: 24px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  row-gap: 64px;
}

@media (min-width:900px) {
  .emotion-2 {
    gap: 48px;
    row-gap: 96px;
    grid-template-columns: 1fr 1fr;
    padding: calc(100% / 12) calc(100% / 6);
  }
}

.emotion-4 {
  display: grid;
  font-weight: 500;
  font-size: 1.25rem;
  gap: 8px;
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 700;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-7 {
    font-size: 32px;
  }
}

.emotion-16 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
}

@media (min-width:600px) {
  .emotion-16 {
    grid-template-columns: 1fr 1fr;
  }
}

.emotion-18 {
  display: grid;
  gap: 8px;
  grid-auto-rows: max-content;
}

.emotion-20 {
  text-transform: uppercase;
  font-weight: 300;
  font-size: 14px;
}

.emotion-22 {
  display: grid;
  font-weight: 500;
  font-size: 1.25rem;
}

.emotion-24 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:600px) {
  .emotion-24 {
    border-bottom: 0;
  }
}

.emotion-25 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-46 {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  height: 50%;
  background-color: #000;
  z-index: -1;
  -webkit-transform: translateY(-2rem);
  -moz-transform: translateY(-2rem);
  -ms-transform: translateY(-2rem);
  transform: translateY(-2rem);
}

<footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Gesellschaft
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Politik
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Kultur
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Tsüri-News
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://google.com"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Was lauft?
          </span>
        </a>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Guides
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Agenda
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="https://google.com"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Denkmal.org
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Tsüri Guide
              </span>
            </a>
          </div>
        </div>
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Fokusthema
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Mobilität
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Bildung
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Konsum
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Archive
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-46 emotion-47"
        />
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Über Uns
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/team/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Team
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/about-us/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Über Uns
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Kontakt
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Jobs
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithError 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.emotion-2 {
  padding: 20px;
  background-color: #1a1a1a;
  color: #fff;
  display: grid;
  gap: 24px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  row-gap: 64px;
}

@media (min-width:900px) {
  .emotion-2 {
    gap: 48px;
    row-gap: 96px;
    grid-template-columns: 1fr 1fr;
    padding: calc(100% / 12) calc(100% / 6);
  }
}

.emotion-4 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
}

@media (min-width:600px) {
  .emotion-4 {
    grid-template-columns: 1fr 1fr;
  }
}

.emotion-8 {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  height: 50%;
  background-color: #000;
  z-index: -1;
  -webkit-transform: translateY(-2rem);
  -moz-transform: translateY(-2rem);
  -ms-transform: translateY(-2rem);
  transform: translateY(-2rem);
}

<footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithLoading 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.emotion-2 {
  padding: 20px;
  background-color: #1a1a1a;
  color: #fff;
  display: grid;
  gap: 24px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  row-gap: 64px;
}

@media (min-width:900px) {
  .emotion-2 {
    gap: 48px;
    row-gap: 96px;
    grid-template-columns: 1fr 1fr;
    padding: calc(100% / 12) calc(100% / 6);
  }
}

.emotion-4 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
}

@media (min-width:600px) {
  .emotion-4 {
    grid-template-columns: 1fr 1fr;
  }
}

.emotion-8 {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  height: 50%;
  background-color: #000;
  z-index: -1;
  -webkit-transform: translateY(-2rem);
  -moz-transform: translateY(-2rem);
  -ms-transform: translateY(-2rem);
  transform: translateY(-2rem);
}

<footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithoutItems 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.emotion-2 {
  padding: 20px;
  background-color: #1a1a1a;
  color: #fff;
  display: grid;
  gap: 24px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow: hidden;
  row-gap: 64px;
}

@media (min-width:900px) {
  .emotion-2 {
    gap: 48px;
    row-gap: 96px;
    grid-template-columns: 1fr 1fr;
    padding: calc(100% / 12) calc(100% / 6);
  }
}

<footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
  </footer>
</DocumentFragment>
`;
